--- a/public/_css/views/recovery_password.css
+++ b/public/_css/views/recovery_password.css
@@ -1,12 +1,8 @@
-:root{
-    --bg-url: "https://images6.alphacoders.com/659/659627.png"
-}
-
 
 body{
     position: relative;
     z-index: 1;
-    background: #30303B url("https://images6.alphacoders.com/659/659627.png");
+    background: #30303B url("../../_images/recovery.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
