--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,38 +8,7 @@
         
     <meta name="language" content="pt-BR">
         <title>MY ANIMES -Assistir animes online grátis</title>
-        
-    <meta name="description" content="Assista animes dublados e legendados de graça em nossa plataforma!">
-        
-    <meta name="robots" content="index">
-        
-    <meta name="author" content="Yrllan Brandão">
-        
-    <meta name="keywords"
-        content="animes, animes grátis, animes dublados, animes lengendados, naruto shippudden dublado, dragon ball z, bleach, Overlord">
-        
-    <meta property="og:type" content="page">
-        
-    <meta property="og:url" content="myanimes.biz">
-        
-    <meta property="og:title" content="My animes  - ">
-        
-    <meta property="og:image" content="https://images6.alphacoders.com/626/626763.jpg">
-        
-    <meta property="og:description" content="assista animes dublados e legendados online totalmente de graça">
-        
-    <meta property="article:author" content="Yrllan Brandão">
-        
-    <meta name="twitter:card" content="summary_large_image">
-        
-    <meta name="twitter:site" content="@myanimes">
-        
-    <meta name="twitter:title" content="My animes">
-        
-    <meta name="twitter:creator" content="@yrllanbrandao">
-        
-    <meta name="twitter:description" content="assista animes dublados e legendados online totalmente de graça">
-
+       
     <link rel="stylesheet" href="./_css/views/components.css">
     <link rel="stylesheet" href="./_css/views/components/menu.css">
     <link rel="stylesheet" href="./_css/home.css">
@@ -49,13 +18,13 @@
 <body>
 
 
-
+    <div class="overlay"></div>
     <%- include("./partials/preloading.ejs") %>
-        <div class="container-fluid d-flex flex-row justify-content-center align-items-center bg-overlay ">
+        <div class="container-fluid d-flex flex-row justify-content-center align-items-center  ">
             <%- include("./partials/menu.ejs") %>
 
 
-                <div class="container-one-view d-flex flex-column justify-content-center align-items-center">
+                <div class="container-one-view d-flex flex-column justify-content-center align-items-center ">
 
                     <ul class="recent d-flex flex-column justify-content-center align-items-center gap-3">
                         <h1 class="fs-3 text-light d-flex justify-content-start align-items-center"><svg
@@ -310,7 +279,7 @@
                     <!--  -->
 
                 </div>
-
+</div>
                 <!-- scripts -->
                 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"
